# short-url

./: .env  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.tmp/: .gitignore
src/: main.py  shorts.py
tests/: test_main.py  test_shorts.py
